tests/baselines/reference/getAccessorWithImpliedReturnTypeAndFunctionClassMerge.errors.txt
getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(4,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== getAccessorWithImpliedReturnTypeAndFunctionClassMerge.ts (2 errors) ====
    declare function _<T>(value: Array<T>): _<T>;
    declare function _<T>(value: T): _<T>;
    
    declare module _ {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function each<T>(
            //list: List<T>,
            //iterator: ListIterator<T, void>,
            context?: any): void;
    
        interface ListIterator<T, TResult> {
            (value: T, index: number, list: T[]): TResult;
        }
    }
    
    declare class _<T> {
        each(iterator: _.ListIterator<T, void>, context?: any): void;
    }
    
    module MyModule { 
           ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class MyClass {
            public get myGetter() {
                var obj:any = {};
                
                return obj;
            }
        }
    }